fix following comments by reviewer